envoyfilter-teaching/envoyfilter/connectionPool/dr-productpage.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: productpage.istio.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 114
        connectTimeout: 30ms
        tcpKeepalive:
          time: 7200s
          interval: 75s
          probes: 10
      http:
        maxRequestsPerConnection: 115
        http1MaxPendingRequests: 116
        maxRetries: 117
        http2MaxRequests: 118
        h2UpgradePolicy: DEFAULT
