envoyfilter-teaching/envoyfilter/connectionPool/ef-outlierDetection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: match
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: CLUSTER
    match:
      cluster:
        name: outbound|9080||productpage.istio.svc.cluster.local
    patch:
      operation: MERGE
      value: 
          circuitBreakers:
            thresholds:
            - maxConnections: 1
              maxPendingRequests: 1
              maxRequests: 4294967295
              maxRetries: 4294967295
              trackRemaining: true
              priority: HIGH
          connectTimeout: 0.030s
          maxRequestsPerConnection: 1
          outlierDetection:
            baseEjectionTime: 5s
            consecutive5xx: 1
            enforcingConsecutive5xx: 100
            enforcingSuccessRate: 0
            interval: 5s
            maxEjectionPercent: 100
